--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Relationship assessment tool",
   "main": "index.html",
   "dependencies": {
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "@anthropic-ai/sdk": "^0.27.0"
   },
   "scripts": {
     "test": "echo \"No tests\" && exit 0"
