--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "dependencies": {
     "node-fetch": "^2.7.0",
-    "@anthropic-ai/sdk": "^0.27.0"
+    "@anthropic-ai/sdk": "^0.32.1",
+    "nodemailer": "^6.9.7"
   },
   "scripts": {
     "test": "echo \"No tests\" && exit 0"
